<resources>
    <string name="app_name">DS Manager</string>
    <string name="title_activity_task_list">DS Manager Tasks</string>
    <string name="title_activity_settings">Settings</string>

    <string name="task_list_empty">No tasks</string>
    <string name="task_list_invalid_server_config">
        No server is configured or login token is invalid, please login again.
    </string>


    <string name="action_settings">Settings</string>
    <string name="action_server_config">Server Config</string>
    <string name="action_debug">Debug</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>

    <string name="action_sort_name_asc">Name ASC</string>
    <string name="action_sort_name_desc">Name DESC</string>
    <string name="action_sort_percent_asc">Percent ASC</string>
    <string name="action_sort_percent_desc">Percent DESC</string>
    <string name="action_sort_dl_speed_asc">DL Speed ASC</string>
    <string name="action_sort_dl_speed_desc">DL Speed DESC</string>
    <string name="action_sort_ul_speed_asc">UL Speed ASC</string>
    <string name="action_sort_ul_speed_desc">UL Speed DESC</string>
    <string name="action_sort_default">Default</string>

    <string name="action_filter_bt">BitTorrent</string>
    <string name="action_filter_http">HTTP</string>
    <string name="action_filter_ftp">FTP</string>
    <string name="action_filter_emule">eMule</string>
    <string name="action_filter_nzb">NZB</string>
    <string name="action_filter_none">None</string>

    <string name="debug_api_button">Test</string>
    <string-array name="debug_api_choices">
        <item>API Info</item>
        <item>Auth Login</item>
        <item>Auth Logout</item>
        <item>DS Get Info</item>
        <item>DS Get Config</item>
        <item>DS Set Config</item>
        <item>DS Task List</item>
        <item>DS Task Get Info</item>
        <item>DS Task Create URI</item>
        <item>DS Task Create File</item>
        <item>DS Task Delete</item>
        <item>DS Task Pause</item>
        <item>DS Task Resume</item>
        <item>DS Task Edit</item>
        <item>DS Stats Info</item>
    </string-array>

    <string name="synapi_error_0">No error</string>
    <string name="synapi_error_1">Network error, refresh to retry</string>
    <string name="synapi_error_100">Unknown error</string>
    <string name="synapi_error_101">Invalid parameter</string>
    <string name="synapi_error_102">Requested API does not exist</string>
    <string name="synapi_error_103">Requested method does not exist</string>
    <string name="synapi_error_104">Requested version does not support this functionality</string>
    <string name="synapi_error_105">Logged-in session does not have permission</string>
    <string name="synapi_error_106">Session timeout</string>
    <string name="synapi_error_107">Duplicate login</string>
    <string name="synapi_dstask_error_400">File upload failed</string>
    <string name="synapi_dstask_error_401">Max number of tasks reached</string>
    <string name="synapi_dstask_error_402">Destination denied</string>
    <string name="synapi_dstask_error_403">Destination does not exist</string>
    <string name="synapi_dstask_error_404">Invalid task ID</string>
    <string name="synapi_dstask_error_405">Invalid task action</string>
    <string name="synapi_dstask_error_406">No default destination</string>
    <string name="synapi_dstask_error_407">Set destination failed</string>
    <string name="synapi_dstask_error_408">File does not exist</string>
    <string name="synapi_dstask_error_544">Task not found</string>

    <string name="synapi_task_status_waiting">Waiting</string>
    <string name="synapi_task_status_downloading">Downloading</string>
    <string name="synapi_task_status_paused">Paused</string>
    <string name="synapi_task_status_finishing">Finishing</string>
    <string name="synapi_task_status_finished">Finished</string>
    <string name="synapi_task_status_hash_checking">Checking Hash</string>
    <string name="synapi_task_status_seeding">Seeding</string>
    <string name="synapi_task_status_filehosting_waiting">Waiting for file host</string>
    <string name="synapi_task_status_extracting">Extracting</string>
    <string name="synapi_task_status_error">Error</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_server">Server</string>
    <string name="pref_title_account">Account</string>
    <string name="pref_title_password">Password</string>

    <string name="pref_key_shared_file">dsmanager_shared_prefs</string>
    <string name="pref_key_account">pref_account</string>
    <string name="pref_key_password">pref_password</string>
    <string name="pref_key_server">pref_server</string>
    <string name="pref_key_sid">pref_sid</string>
    <string name="pref_key_sid_header">pref_sid_header</string>

    <string name="title_activity_task_info">TaskInfoActivity</string>
    <string name="detail_general_header">General</string>
    <string name="detail_destination_label">Destination</string>
    <string name="detail_download_label">Download</string>
    <string name="detail_size_label">Size</string>
    <string name="detail_eta_label">ETA</string>
    <string name="detail_tracker_header">Tracker</string>
    <string name="detail_upload_label">Upload</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_save">Save</string>

    <string name="title_activity_add_task">Add a Task</string>
    <string name="pref_key_default_destination">pref_default_destination</string>
    <string name="pref_title_default_destination">Default Destination</string>
    <string name="pref_default_default_destination">downloads</string>
    <string name="action_add">Add</string>
    <string name="add_radio_label_uri">URI</string>
    <string name="add_label_type">Type</string>
    <string name="add_edit_uri">URI</string>
    <string name="add_edit_destination">Destination</string>
    <string name="toast_task_created">New Task Created</string>
    <string name="add_radio_label_file">File</string>

    <string name="internal_storage">Internal storage</string>
    <string name="edit_task_dialog_title">Move Task</string>
    <string name="edit_task_dialog_message">New Destination</string>
    <string name="edit_task_dialog_confirm">Move</string>
    <string name="edit_task_dialog_cancel">Cancel</string>
    <string name="edit_task_success">Task moved successfully</string>
    <string name="pause_task_success">Task paused successfully</string>
    <string name="resume_task_success">Task resumed successfully</string>
    <string name="icon_content_description">ICON</string>
    <string name="title_activity_server_config">Server Config</string>
    <string name="config_label_kbs">KB/s</string>
    <string name="config_label_transfer">Transfer</string>
    <string name="config_hint_bt_download_speed">BT Download Speed</string>
    <string name="config_hint_bt_upload_speed">BT Upload Speed</string>
    <string name="config_hint_emule_download_speed">Emule Download Speed</string>
    <string name="config_hint_emule_upload_speed">Emule Upload Speed</string>
    <string name="config_hint_nzb_download_speed">NZB Download Speed</string>
    <string name="config_hint_http_ftp_download_speed">HTTP/FTP Download Speed</string>
    <string name="config_set_success">Saved server config</string>
    <string name="config_set_fail">Could not save server config</string>
    <string name="config_set_fail_network">Could not save server config, network error</string>
    <string name="config_get_fail">Could not get server config</string>
    <string name="config_get_fail_network">Could not get server config, network error</string>
    <string name="config_label_storage">Storage</string>
    <string name="config_hint_default_destination">Default Destination</string>
    <string name="config_hint_emule_default_destination">Emule Default Destination</string>

    <string name="login_syno_url_hint">Synology API URL</string>
    <string name="login_syno_username_hint">Username</string>
    <string name="login_syno_password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="logo_content_description">logo</string>
    <string name="login_invalid_url">API URL is invalid, please enter a valid value.</string>

    <string name="extra_add_task_data">extra_add_task_data</string>
</resources>
