<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:inputType="textUri"
        android:key="@string/pref_key_server"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server" />
    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="@string/pref_key_account"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_account" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/pref_key_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />
</PreferenceScreen>
