<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="10"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:orderInCategory="20"
        android:title="@string/action_resume"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_pause_white_24dp"
        android:orderInCategory="30"
        android:title="@string/action_pause"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="50"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>