<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.imatruck.dsmanager.TaskListActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="20"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_autorenew_white_24dp" />

    <item
        android:id="@+id/action_server_config"
        android:orderInCategory="40"
        android:title="Server Config"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_build_white_24px"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:orderInCategory="150"
        android:title="@string/action_debug"
        app:showAsAction="never" />
</menu>
